force-app/main/default/objects/msf_Modelo182__c/msf_Modelo182__c.object-meta.xml
<CustomObject>
    <description>Objeto para la creación y gestión del modelo 182</description>
    <label>Modelo182</label>
    <nameField>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modelo182</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>