force-app/main/default/objects/msf_Modelo182__c/fields/msf_Anterior__c.field-meta.xml
<CustomField>
    <fullName>msf_Anterior__c</fullName>
    <defaultValue>&quot;0000000000000&quot;</defaultValue>
    <description>Número identificativo de la declaración anterior.</description>
    <inlineHelpText>Número identificativo de la declaración anterior.</inlineHelpText>
    <label>Anterior</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
</CustomField>