force-app/main/default/objects/msf_Modelo182__c/fields/msf_Anyo_fiscal__c.field-meta.xml
<CustomField>
    <fullName>msf_Anyo_fiscal__c</fullName>
    <defaultValue>TEXT(YEAR( TODAY())-1)</defaultValue>
    <description>Año fiscal</description>
    <inlineHelpText>Año fiscal</inlineHelpText>
    <label>Año fiscal</label>
    <length>4</length>
    <type>Text</type>
</CustomField>