force-app/main/default/objects/msf_Modelo182__c/fields/msf_caracter__c.field-meta.xml
<CustomField>
    <fullName>msf_caracter__c</fullName>
    <description>Valores permitidos: C / S / blanco, en el caso excepcional de segunda o posterior presentación de declaraciones.</description>
    <inlineHelpText>Valores permitidos: C / S / blanco, en el caso excepcional de segunda o posterior presentación de declaraciones.</inlineHelpText>
    <label>caracter</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
                <default>true</default>
                <label>Nueva</label>
            </value>
            <value>
                <fullName>Complementaria</fullName>
            </value>
            <value>
                <fullName>Sustitutiva</fullName>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
            <value>
                <fullName>S</fullName>
                <isActive>false</isActive>
                <label>S</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>