force-app/main/default/objects/msf_Modelo182__c/fields/msf_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>msf_Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>