force-app/main/default/objects/msf_Modelo182__c/fields/msf_Estado__c.field-meta.xml
<CustomField>
    <fullName>msf_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Iniciando proceso</fullName>
                <default>true</default>
                <label>Iniciando proceso</label>
            </value>
            <value>
                <fullName>Recalculando 4º año</fullName>
            </value>
            <value>
                <fullName>Generando fichero</fullName>
            </value>
            <value>
                <fullName>Enviando al Chatter</fullName>
            </value>
            <value>
                <fullName>Finalizado OK</fullName>
            </value>
            <value>
                <fullName>Finalizado Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>