force-app/main/default/objects/msf_Modelo182__c/fields/msf_Fin_generacion__c.field-meta.xml
<CustomField>
    <fullName>msf_Fin_generacion__c</fullName>
    <label>Fin generación</label>
    <type>DateTime</type>
</CustomField>