force-app/main/default/objects/msf_Modelo182__c/fields/msf_Inicio_generacion__c.field-meta.xml
<CustomField>
    <fullName>msf_Inicio_generacion__c</fullName>
    <label>Inicio generación</label>
    <type>DateTime</type>
</CustomField>