force-app/main/default/objects/msf_Modelo182__c/fields/msf_Justificante__c.field-meta.xml
<CustomField>
    <fullName>msf_Justificante__c</fullName>
    <defaultValue>&quot;0000000000000&quot;</defaultValue>
    <description>Se consignará el número de justificante correspondiente a la declaración. Campo de contenido numérico de 13 posiciones.</description>
    <inlineHelpText>Se consignará el número de justificante correspondiente a la declaración. Campo de contenido numérico de 13 posiciones.</inlineHelpText>
    <label>Justificante</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
</CustomField>