force-app/main/default/objects/msf_Modelo182__c/fields/msf_Registros__c.field-meta.xml
<CustomField>
    <fullName>msf_Registros__c</fullName>
    <description>Contador.</description>
    <inlineHelpText>Contador.</inlineHelpText>
    <label>Registros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>