force-app/main/default/objects/msf_Modelo182__c/fields/msf_Resultado__c.field-meta.xml
<CustomField>
    <fullName>msf_Resultado__c</fullName>
    <description>Pequeño resumen del log.</description>
    <inlineHelpText>Pequeño resumen del log</inlineHelpText>
    <label>Resultado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>