force-app/main/default/objects/msf_Modelo182__c/fields/msf_Total__c.field-meta.xml
<CustomField>
    <fullName>msf_Total__c</fullName>
    <description>Suma total.</description>
    <inlineHelpText>Suma total.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>