force-app/main/default/objects/msf_Modelo182__c/validationRules/Ejercicio_posible.validationRule-meta.xml
<ValidationRule>
    <fullName>Ejercicio_posible</fullName>
    <active>true</active>
    <description>Sólo debe permitir seleccionar el año actual o el anterior</description>
    <errorConditionFormula>AND(msf_Anyo_fiscal__c &lt;&gt; TEXT(YEAR( TODAY())-1), msf_Anyo_fiscal__c &lt;&gt; TEXT(YEAR(TODAY())))</errorConditionFormula>
    <errorDisplayField>msf_Anyo_fiscal__c</errorDisplayField>
    <errorMessage>Año fiscal no válido. Sólo se admite el año actual y el anterior.</errorMessage>
</ValidationRule>